--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wdth,wght@0,18..144,87..112,300..900;1,18..144,87..112,300..900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
             rel="stylesheet" />
         <link rel="stylesheet" href="./styles/main.css" />
         <title>Marketplace - Compito di fine modulo</title>
@@ -26,32 +28,36 @@
         <!-- NAVBAR -->
         <nav class="container py-2">
             <div class="row align-items-center">
-                <div class="col-4">
+                <ul class="col-4 list-unstyled d-flex gap-4 mb-0">
+                    <li>
+                        <a class="text-decoration-none" href="./index.html"
+                            >HOME</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            class="text-decoration-none"
+                            href="./back-office.html"
+                            >ADD ITEMS</a
+                        >
+                    </li>
+                </ul>
+                <div class="col-4 text-center">
                     <img
                         src="./assets/logo.png"
                         alt="Marketplace logo"
                         class="img-fluid rounded shadow"
                         width="100" />
                 </div>
-                <ul
-                    class="col-4 list-unstyled d-flex justify-content-center gap-3 mb-0">
-                    <li>
-                        <a class="text-decoration-none" href="#">Home</a>
-                    </li>
-                    <li>
-                        <a class="text-decoration-none" href="#">Add items</a>
-                    </li>
-                </ul>
-                <div class="col-4 fs-4 text-end">
+                <div class="col-4 d-flex justify-content-end gap-4 fs-5">
                     <i class="bi bi-search"></i>
-                    <i class="bi bi-person-circle mx-3"></i>
                     <i class="bi bi-bag"></i>
                 </div>
             </div>
         </nav>
         <!-- JUMBOTRON -->
-        <div class="jumbotron p-5 mb-4">
-            <div class="container-fluid text-center py-5">
+        <div class="container-fluid jumbotron p-5 mb-4">
+            <div class="container d-flex flex-column gap-3 py-5">
                 <h1 class="display-1 fw-bold text-white">
                     Welcome to your favorite Marketplace.
                 </h1>
@@ -59,17 +65,18 @@
                     A whole world of amazing products to discover and buy from
                     your comfy home!
                 </p>
-                <button class="btn btn-warning btn-lg" type="button">
-                    About us<i class="bi bi-arrow-right-circle-fill ms-3"></i>
+                <button class="hero-btn align-self-start shadow" type="button">
+                    About us<i
+                        class="bi bi-arrow-right-circle-fill fs-4 ms-3"></i>
                 </button>
             </div>
         </div>
         <!-- MAIN CONTENT -->
-        <main class="container">
+        <main class="container py-5">
             <!-- PRODUCTS SECTION -->
-            <section class="row gy-5">
-                <div class="col-12 text-center">
-                    <h2>Discover our Products</h2>
+            <section class="row gy-3">
+                <div class="col-12">
+                    <h2 class="display-6 mb-0">Discover our Products</h2>
                     <p>
                         The best products you can find on the market within the
                         reach of a click!
