--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -21,10 +19,21 @@
         <link
             href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
             rel="stylesheet" />
+        <link rel="stylesheet" href="./styles/swiper.css" />
         <link rel="stylesheet" href="./styles/main.css" />
         <title>Marketplace - Compito di fine modulo</title>
     </head>
     <body class="d-flex flex-column vh-100">
+        <div class="container-fluid bg-warning py-1">
+            <div class="row">
+                <div class="col">
+                    <p class="text-center mb-0">
+                        You are currently logged in as
+                        <span class="user-role">Shop Manager</span>.
+                    </p>
+                </div>
+            </div>
+        </div>
         <!-- NAVBAR -->
         <nav class="container py-2">
             <div class="row align-items-center">
@@ -84,7 +93,7 @@
                 </div>
                 <div class="col-12">
                     <!-- SWIPER -->
-                    <div class="swiper">
+                    <div class="swiper overflow-visible">
                         <div id="spinnerContainer" class="text-center d-none">
                             <div
                                 class="spinner-border text-warning"
@@ -97,7 +106,6 @@
                         <div id="slidesContainer" class="swiper-wrapper"></div>
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
-                        <div class="swiper-scrollbar"></div>
                     </div>
                 </div>
             </section>
@@ -148,6 +156,7 @@
             integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="./scripts/swiper.js"></script>
         <script src="./scripts/main.js"></script>
     </body>
 </html>
