Back Office: handled waiting times and errors

--- a/back-office.html
+++ b/back-office.html
@@ -127,8 +127,19 @@
                                 <th scope="col" class="text-center">Delete</th>
                             </tr>
                         </thead>
-                        <tbody id="tableBody"></tbody>
+                        <tbody id="tableBodyContainer"></tbody>
                     </table>
+                    <!-- SPINNER -->
+                    <div id="spinnerContainer" class="text-center py-5 d-none">
+                        <div
+                            class="spinner-border text-primary"
+                            role="status"></div>
+                    </div>
+                    <!-- ALERT -->
+                    <div
+                        id="alertContainer"
+                        class="alert alert-primary text-center d-none"
+                        role="alert"></div>
                 </div>
             </section>
             <!-- MODAL -->
