Back Office: code refactoring of Form Validation

--- a/back-office.html
+++ b/back-office.html
@@ -93,7 +93,7 @@
                                 class="form-control"
                                 type="text"
                                 placeholder="Product Image (URL)" />
-                            <small class="input-error url"></small>
+                            <small class="input-error"></small>
                         </div>
                         <div>
                             <textarea
